--- a/Source/dating_server/.env
+++ b/Source/dating_server/.env
@@ -1,6 +1,6 @@
 
 # Thay bằng chuỗi kết nối MongoDB Atlas của bạn
-MONGO_URI=mongodb+srv://nguyencongdanh1407_db_user:fuAfBFjoeh9rSea5@danhomo.hnjdocn.mongodb.net/dating?retryWrites=true&w=majority&appName=DanhOMO
+MONGO_URI=mongodb+srv://root:123@cluster0.fdqpngt.mongodb.net/dating?appName=Cluster0
 
 # Thay bằng một chuỗi BÍ MẬT ngẫu nhiên, dài
 JWT_SECRET=AreYouSingleNow
