--- a/Source/are_you_single/package.json
+++ b/Source/are_you_single/package.json
@@ -45,6 +45,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.6.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
