--- a/Source/are_you_single/package.json
+++ b/Source/are_you_single/package.json
@@ -12,6 +12,8 @@
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/drawer": "^7.6.0",
     "@react-navigation/native": "^7.1.18",
@@ -22,6 +24,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "^54.0.20",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-router": "~6.0.13",
     "expo-secure-store": "^15.0.7",
