--- a/Source/are_you_single/android/build.gradle
+++ b/Source/are_you_single/android/build.gradle
@@ -13,12 +13,14 @@ buildscript {
 }
 
 allprojects {
-  repositories {
-    google()
-    mavenCentral()
-    maven { url 'https://www.jitpack.io' }
-  }
-}
+    repositories {
+        mavenCentral()
+        google()
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://maven.expo.dev' }
 
+        maven { url 'https://storage.zego.im/maven' } 
+    }
+}
 apply plugin: "expo-root-project"
 apply plugin: "com.facebook.react.rootproject"
