--- a/Source/are_you_single/android/.gitignore
+++ b/Source/are_you_single/android/.gitignore
@@ -1,16 +1,21 @@
-# OSX
-#
-.DS_Store
-
-# Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
-*.iml
-*.hprof
+# Thư mục build của C++ (đây chính là cái gây lỗi)
 .cxx/
 
-# Bundle artifacts
-*.jsbundle
+# Thư mục build chung của Gradle
+build/
+
+# Thư mục build của app
+app/build/
+
+# Các file build tạm
+*.o
+*.a
+*.so
+
+# File local settings (không nên đưa lên)
+local.properties
+
+# Thư mục Android Studio / IDEA
+.idea/
+.gradle/
+*.iml
