--- a/Source/dating_server/.env
+++ b/Source/dating_server/.env
@@ -4,3 +4,8 @@ MONGO_URI=mongodb+srv://root:123@cluster0.fdqpngt.mongodb.net/dating?appName=Clu
 
 # Thay bằng một chuỗi BÍ MẬT ngẫu nhiên, dài
 JWT_SECRET=AreYouSingleNow
+
+CLOUDINARY_CLOUD_NAME=dybv2kwhk
+CLOUDINARY_API_KEY=828476781652141
+CLOUDINARY_API_SECRET=KNJf4ivOJ-aZ7jwlfrrxria-xWs
+# CLOUDINARY_URL=cloudinary://828476781652141:KNJf4ivOJ-aZ7jwlfrrxria-xWs@dybv2kwhk
