--- a/Source/dating_server/package.json
+++ b/Source/dating_server/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.8.0",
+    "datauri": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "formidable": "^3.5.4",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1"
   }
 }
