--- a/Source/dating_server/package.json
+++ b/Source/dating_server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.8.0",
+    "crypto": "^1.0.1",
     "datauri": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -21,6 +22,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "socket.io": "^4.8.1"
   }
 }
