--- a/Source/are_you_single/android/.gitignore
+++ b/Source/are_you_single/android/.gitignore
@@ -1,20 +1,16 @@
-# Thư mục build của C++ (đây chính là cái gây lỗi)
+# OSX
+#
+.DS_Store
+
+# Android/IntelliJ
+#
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
 .cxx/
 
-# Thư mục build chung của Gradle
-build/
-
-# Thư mục build của app
-app/build/
-
-# Các file build tạm
-*.o
-*.a
-*.so
-
-# File local settings (không nên đưa lên)
-local.properties
-
-# Thư mục Android Studio / IDEA
-.idea/
-*.iml
+# Bundle artifacts
+*.jsbundle
